# Aegis

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LAUNCH.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  fly.toml  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
research/: .gitignore  README.md  REPRODUCE.md  pyproject.toml
research/adaptive/: __init__.py  obfuscate.py  red_team.py
research/adaptive/results/: adaptive-keyword-53seeds.jsonl  adaptive-llm_judge-20seeds.jsonl  adaptive-llm_judge-53seeds.jsonl  adaptive-rules-53seeds.jsonl
research/benchmark/: build.py  stats.py
research/benchmark/loaders/: __init__.py  aegis_self.py  agentdojo.py  base.py  injecagent.py  owasp.py  sharegpt.py  toolbench.py  toolemu.py
research/benchmark/scripts/: build_owasp_payloads.py  download_all.py  extract_aegis_self.py
research/cascade/: __init__.py  l2_xgboost.py
research/paper-emnlp/: main.tex
research/paper-emnlp/figures/: pareto_data.csv  summary_index.csv
research/results/: error_analysis.json  feature_importances.json  obfuscation_robustness.json  threshold_sensitivity.json
research/results/aegis_rules__aegis-bench__20260416-173938/: summary.json
research/results/cascade-L2only__l10_l21_l30__20260416-161518/: summary.json
research/results/cascade-escalate80__l11_l21_l31__20260416-235138/: summary.json
research/results/cascade-gpt4o__l11_l21_l31__20260417-130310/: summary.json
research/results/cascade-gpt4omini__l11_l21_l31__20260417-105706/: summary.json
research/results/cascade-gpt4omini__l11_l21_l31__20260417-121117/: summary.json
research/scripts/: aggregate_results.py  error_analysis.py  feature_importance.py  obfuscation_robustness.py  plot_adaptive.py  plot_category.py  plot_cross_source.py  plot_l2_distribution.py  plot_pareto.py  sequence_eval.py  slice_by_granularity.py  threshold_sensitivity.py
(+324 files in other folders)
